compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/incompleteVal.kt
// RUN_PIPELINE_TILL: FRONTEND
package c

val i =<!SYNTAX!><!>

/* GENERATED_FIR_TAGS: propertyDeclaration */
